# djangochallange1

./: db.sqlite3  pyproject.toml
common/: models.py
common/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  seralizers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_rename_name_like_reply_remove_like_user_and_more.py  0004_like_user.py
tweets/templates/: tweet.html
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: users.html
